test/types/enum/diten/paramEnumOutOfBounds2.good
paramEnumOutOfBounds2.chpl:3: error: can't cast from int(64) to an abstract enum type ('enumt')
