test/types/enum/diten/paramEnumOutOfBounds2.compopts
-sval=0
-sval=1
